Complete OpenRuntime 2.0.0 release with comprehensive MLX Metal integration
- Implemented full MLX Metal Performance Shaders integration with proper fallback
- Added PyTorch Metal support for enhanced GPU acceleration
- Created professional CLI interface with Rich terminal UI
- Comprehensive test suite with 33 passing tests and 69% coverage
- Complete FastAPI REST API with WebSocket support
- Professional GitHub workflows for CI/CD and releases
- Docker support with multi-stage builds
- Comprehensive documentation and deployment guides
- Issue and PR templates for community contribution
- Security scanning and vulnerability assessment
- Performance benchmarking and monitoring capabilities
- Real-time GPU metrics collection and visualization

Author: Nik Jois <nikjois@llamasearch.ai>
Version: 2.0.0

--- a/.env.example
+++ b/.env.example
@@ -1,129 +1,14 @@
-# OpenRuntime Enhanced Configuration
-# Copy this file to .env and update the values
+# OpenRuntime Enhanced Environment Variables
+# Copy this file to .env and fill in your values
 
-# =============================================================================
-# Application Settings
-# =============================================================================
-APP_NAME=OpenRuntime Enhanced
-APP_VERSION=1.0.0
-DEBUG=false
-LOG_LEVEL=INFO
-HOST=0.0.0.0
-PORT=8000
-WORKERS=4
+# Required: OpenAI API Key
+OPENAI_API_KEY=sk-your-openai-api-key-here
 
-# =============================================================================
-# AI Provider Settings
-# =============================================================================
-# OpenAI Configuration
-OPENAI_API_KEY=your-openai-api-key-here
-OPENAI_MODEL=gpt-4
-OPENAI_TEMPERATURE=0.7
-OPENAI_MAX_TOKENS=2048
+# Optional: Other settings
+LOG_LEVEL=info
+MAX_CONCURRENT_TASKS=20
+GPU_FALLBACK_TO_CPU=true
+MLX_ENABLED=true
 
-# Anthropic Configuration (optional)
-ANTHROPIC_API_KEY=your-anthropic-api-key-here
-
-# Local AI Model Configuration (optional)
-LOCAL_MODEL_PATH=/models/local-llm
-LOCAL_MODEL_DEVICE=auto
-
-# =============================================================================
-# Database Configuration
-# =============================================================================
-# PostgreSQL
-DATABASE_URL=postgresql://postgres:password@localhost:5432/openruntime
-POSTGRES_DB=openruntime
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=password
-POSTGRES_HOST=localhost
-POSTGRES_PORT=5432
-
-# Redis
-REDIS_URL=redis://localhost:6379/0
-REDIS_HOST=localhost
-REDIS_PORT=6379
-REDIS_PASSWORD=openruntime123
-REDIS_DB=0
-
-# =============================================================================
-# Security Settings
-# =============================================================================
-SECRET_KEY=your-super-secret-key-change-this-in-production
-JWT_SECRET_KEY=your-jwt-secret-key
-JWT_ALGORITHM=HS256
-JWT_EXPIRE_MINUTES=1440
-
-# API Rate Limiting
-RATE_LIMIT_REQUESTS=100
-RATE_LIMIT_WINDOW=60
-
-# =============================================================================
-# GPU and Computing Settings
-# =============================================================================
-# GPU Configuration
-GPU_MEMORY_LIMIT=0.8
-GPU_COMPUTE_CAPABILITY=auto
-ENABLE_METAL=true
-ENABLE_CUDA=auto
-
-# Performance Settings
-MAX_CONCURRENT_TASKS=50
-TASK_TIMEOUT=300
-BACKGROUND_WORKERS=8
-
-# =============================================================================
-# Monitoring and Observability
-# =============================================================================
-# Prometheus
-ENABLE_METRICS=true
-METRICS_PORT=8001
-METRICS_PATH=/metrics
-
-# Grafana
-GRAFANA_USER=admin
-GRAFANA_PASSWORD=admin
-
-# Logging
-LOG_FORMAT=json
-LOG_FILE=/app/logs/openruntime.log
-LOG_ROTATION=daily
-LOG_RETENTION_DAYS=30
-
-# =============================================================================
-# External Services
-# =============================================================================
-# Webhook URLs
-WEBHOOK_SUCCESS_URL=https://your-webhook-url.com/success
-WEBHOOK_ERROR_URL=https://your-webhook-url.com/error
-
-# Email Configuration (optional)
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_USER=your-email@gmail.com
-SMTP_PASSWORD=your-app-password
-EMAIL_FROM=noreply@openruntime.example.com
-
-# =============================================================================
-# Development Settings
-# =============================================================================
-# Development flags
-RELOAD=false
-DEBUG_TOOLBAR=false
-PROFILE_REQUESTS=false
-
-# Testing
-TEST_DATABASE_URL=postgresql://postgres:password@localhost:5432/openruntime_test
-PYTEST_WORKERS=auto
-
-# =============================================================================
-# Docker and Deployment
-# =============================================================================
-# Container settings
-CONTAINER_TIMEZONE=UTC
-PYTHONPATH=/app
-
-# Health check settings
-HEALTH_CHECK_INTERVAL=30s
-HEALTH_CHECK_TIMEOUT=10s
-HEALTH_CHECK_RETRIES=3
+# Monitoring
+PROMETHEUS_ENABLED=true
