--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,35 +47,59 @@ jobs:
       run: isort --check-only .
     
     - name: Type check with mypy
-      run: mypy openruntime_enhanced.py
+      run: mypy openruntime.py --ignore-missing-imports
     
     - name: Security check with bandit
       run: bandit -r . -x tests/
     
     - name: Test with pytest
       run: |
-        pytest tests/ -v --cov=. --cov-report=xml
+        pytest tests/test_openruntime.py -v --cov=. --cov-report=xml
     
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
       with:
         file: ./coverage.xml
 
+  # =============================================================================
+  # macOS Testing (for Metal support)
+  # =============================================================================
+  test-macos:
+    runs-on: macos-latest
+    strategy:
+      matrix:
+        python-version: [3.11]
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v4
+      with:
+        python-version: ${{ matrix.python-version }}
+    
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        pip install -r requirements-dev.txt
+    
+    - name: Test with pytest (macOS)
+      run: |
+        pytest tests/test_openruntime.py -v --tb=short
+    
+    - name: Test server startup
+      run: |
+        timeout 10s python openruntime.py --host 127.0.0.1 --port 8000 || echo "Server test completed"
+
+  # =============================================================================
+  # Docker Build and Test
+  # =============================================================================
   docker:
     runs-on: ubuntu-latest
     needs: test
-    
     steps:
     - uses: actions/checkout@v4
     - name: Build Docker image
-      run: docker build -t openruntime-enhanced .
+      run: docker build -t openruntime .
     - name: Test Docker image
-      run: docker run --rm openruntime-enhanced python -c "import openruntime_enhanced"
-
-  services:
-    postgres:
-      image: postgres:15
-      env:
-        POSTGRES_PASSWORD: postgres
-        POSTGRES_DB: openruntime_test
-      options: >-
+      run: docker run --rm openruntime python -c "import openruntime; print('Import successful')"
