--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,8 @@ fastapi==0.104.0
 uvicorn[standard]>=0.24.0
 
 # Data validation and parsing
-pydantic>=2.0.0
+# Pinned to Pydantic v1 for compatibility with langchain and langchain_openai
+pydantic==1.10.14
 
 # HTTP client
 httpx>=0.25.0
@@ -13,10 +14,8 @@ websockets>=11.0.0
 
 # AI and ML
 openai>=1.35.0
-langchain>=0.2.0
-langchain-openai>=0.1.0
-langchain-community>=0.2.0
-langchain-core>=0.2.0
+langchain==0.0.353
+langchain-openai==0.0.8
 
 # Async support
 aiofiles>=23.0.0
@@ -53,14 +52,19 @@ cachetools>=5.3.0
 # Date/time handling
 python-dateutil>=2.8.0
 
-# Concurrent processing
-concurrent-futures>=3.1.1
-
 # Shell command utilities
 subprocess32>=3.5.4; python_version<"3.0"
 
-# GPU support (optional)
-torch>=2.0.0; platform_machine=="arm64"  # Apple Silicon
+# GPU support - Apple Silicon Metal frameworks
+mlx>=0.0.6; platform_machine=="arm64"  # Apple MLX Metal framework
+torch>=2.0.0; platform_machine=="arm64"  # PyTorch with Metal support
+torchvision>=0.15.0; platform_machine=="arm64"
+torchaudio>=2.0.0; platform_machine=="arm64"
+
+# GPU support - Universal (CPU fallback)
+torch>=2.0.0; platform_machine!="arm64"  # PyTorch CPU version
+torchvision>=0.15.0; platform_machine!="arm64"
+torchaudio>=2.0.0; platform_machine!="arm64"
 
 # Database (optional)
 sqlalchemy>=2.0.0
@@ -69,3 +73,12 @@ alembic>=1.12.0
 # CLI utilities
 click>=8.1.0
 rich>=13.0.0
+pyyaml>=6.0.0
+
+# Additional ML dependencies
+scikit-learn>=1.3.0
+matplotlib>=3.7.0
+seaborn>=0.12.0
+
+# Performance monitoring
+gputil>=1.4.0
